@startuml
'https://plantuml.com/class-diagram

interface ShootStrategy{
    +shoot(int x,int y):List<AbstractBullet>
}
abstract class AbstractAircraft{
    - maxHp:int
    - hp:int
    - shootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + setshootStrategy(ShootStrategy)
}
class Game{
    - Create
}
class ConcreteShootStrategy{
    +shoot(int x,int y):List<Bullet>
}
ConcreteShootStrategy --|> ShootStrategy
AbstractAircraft o--> ShootStrategy
Game --> AbstractAircraft
Game ..> ConcreteShootStrategy

@enduml